feature[ats_TW1384]: Provide REST calls for valid attr type choices
Change-Id: Ib109dcc139adb0e78d36f899b53611e0ae0775ce